adding torunament endopoint and data
